# Individual-C-C-Projects

./: README.md
Animation System/: ANIM.CPP  ANIM.H  CAMERA.H  DEF.H  IMAGE.CPP  IMAGE.H  INPUT.H  MAIN.CPP  MATERIAL.CPP  MATERIAL.H  MATR.H  MTH.H  MTHDEF.H  README.md  RENDER.CPP  RENDER.H  RESMAN.H  RNDPRIM.CPP  RNDPRIM.H  RNDPRIMS.CPP  RNDPRIMS.H  SHADER.CPP  SHADER.H  T05ANIM.sln  T05ANIM.vcxproj  T05ANIM.vcxproj.filters  TEST.CPP  TEXTURE.CPP  TEXTURE.H  TIMER.H  U_CONTRL.H  U_TEST.H  VEC.H  WIN.CPP  WIN.H  WINMSG.CPP
BMP/: CMakeLists.txt
BMP/include/: bmp.h  stego.h
BMP/src/: bmp.c  main.c  stego.c
Cross-zero/: Makefile
Cross-zero/include/: Board.h  BoardTest.h  BoardView.h  GameController.h  NcursesBoardView.h  StdioBoardView.h  Test.h
Cross-zero/src/: Board.cpp  BoardView.cpp  GameController.cpp  NcursesBoardView.cpp  StdioBoardView.cpp  main.cpp
Cross-zero/test/: BoardTest.cpp  test.cpp
FL-HSEHW03FilippovTask3/: Makefile
FL-HSEHW03FilippovTask3/include/: Regexp.h
FL-HSEHW03FilippovTask3/src/: Regexp.cpp  main.cpp
FL-HSEHW03FilippovTask3/test/: TestRegexp.cpp
Huffman/: Makefile  README.md
Huffman/include/: BitStream.h  CLI.h  FreqsCounter.h  Huffman.h  HuffmanArchiver.h
Huffman/src/: CLI.cpp  Huffman.cpp  HuffmanArchiver.cpp  main.cpp
Huffman/test/: TestBitStream.cpp  TestFreqCounter.cpp  TestHuffmanArchiver.cpp  (+2 more)
Ray Tracing System/: README.md  T08RT.vcxproj
TGL/: TGL.h  TGLLANGCL.cpp  TGLLANGCL.h  TGLMAIN.cpp  TGLTOK.cpp  TGLTOK.h
Tough Graphics Language/: TGL.sln  TGL.vcxproj  TGL.vcxproj.filters  TGLCONTAINER.h
(+1 files in other folders)
